--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-tsparticles": "^2.6.0",
-    "react-typed": "^1.2.0",
-    "tsparticles": "^2.6.0"
+    "react-icons": "4.7.1",
+    "react-tsparticles": "2.6.0",
+    "react-typed": "1.2.0",
+    "tsparticles": "2.6.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
