--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/components/ParticlesBG.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx",
+    "components/ParticlesBG.js"
+  ],
   "exclude": ["node_modules"]
 }
