--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "find:unused": "next-unused"
+  },
+  "next-unused": {
+    "alias" : {},
+    "include": ["components"],
+    "exclude": [],
+    "entrypoints":[]
   },
   "dependencies": {
     "framer-motion": "^7.6.19",
     "next": "13.0.6",
+    "next-unused": "^0.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
